optimized for laptops

--- a/newweb-master/index.html
+++ b/newweb-master/index.html
@@ -68,25 +68,29 @@
                 <span class="heading-primary-sub" style="color: greenyellow;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores exercitationem recusandae rem porro officiis similique!</span>
             </h1>
         </div>
-    </header>
+    </header>   
+    </div>
 
-    <div class="model-container" id="PickYours">
-        <img src="Images/bike1.jpg" class="model-img" alt="BikeModel">
-        <img src="Images/bike2.jpg" class="model-img" alt="BikeModel">
-        <img src="Images/bike3.jpg" class="model-img" alt="BikeModel">
-        <div class="model-content">
-            <p class="heading" style="margin-bottom: 1%;">Current</p>
-            <h1 class="model-name" style="margin-bottom: 1%; margin-top: 1%;">Models</h1>
-            <div class="dropdown">
-                <p class="link dropbtn">Pick Your's</p>
-                <div class="dropdown-content">
-                    <a style="display: inline-block;" href="#">Model1 Name</a>
-                    <a style="display: inline-block;" href="#">Model2 Name</a>
-                    <a style="display: inline-block;" href="#">Model3 Name</a>
+    <div class="section2">
+        <div class="model-container" id="PickYours">
+            <!--<img src="Images/bike1.jpg" class="model-img" alt="BikeModel">-->
+            <img style="left: 50%;object-fit: cover;" src="Images/bike2.jpg" class="model-img" alt="BikeModel">
+            <img style="left: 0;object-fit: cover;" src="Images/bike3.jpg" class="model-img" alt="BikeModel">
+            <div class="model-content">
+                <p class="heading" style="margin-bottom: 1%;">Current</p>
+                <h1 class="model-name" style="margin-bottom: 1%; margin-top: 1%;">Models</h1>
+                <div class="dropdown">
+                    <p style="margin-left: 8.5%;display: contents;" class="link dropbtn">Pick Your's</p>
+                    <div class="dropdown-content">
+                        <a style="display: inline-block;" href="#">Model1 Name</a>
+                        <a style="display: inline-block;" href="#">Model2 Name</a>
+                        <a style="display: inline-block;" href="#">Model3 Name</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
 
     <div class="info-card">
         <div class="imageonleft">
@@ -112,6 +116,7 @@
             <button class="btn">View</button>
         </div>
     </div>
+ 
 
     <div class ="top" id="AboutUs" style="margin-top: 3%;"><span style="color: greenyellow;font-family: monospace;">About Us</span></div>
     <div class="wrap">
